--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -4,15 +4,15 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;
   }
 }
 
@@ -25,3 +25,21 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* globals.css */
+.bg-wallpaper {
+  background: linear-gradient(145deg, rgb(27, 27, 27, 0.95) 0%, rgb(56, 44, 27, 0.95) 15%, rgb(255, 163, 26, 0.95) 100%), url('/images/Jobhub Wallpaper1.png');
+  /* Ensure the image covers the entire element */
+  background-size: cover;
+  /* Ensure the background (image and gradient) is fixed to cover the entire element */
+  background-position: center;
+  /* Additional styles as needed (like setting the size of the element) */
+  height: 100vh;
+  width: 100vw;
+}
+
+.translate-up-50 {
+  transform: translateY(-50px);
+}
+
+
